src/native/jalium.native.core/include/jalium_api.h

// ============================================================================
// Bitmap Management
// ============================================================================

/// Creates a bitmap from encoded image data (PNG, JPEG, etc.).
/// @param ctx The rendering context.
/// @param data The encoded image data.
/// @param dataSize The size of the data in bytes.
/// @return A handle to the created bitmap, or nullptr on failure.
JALIUM_API JaliumImage* jalium_bitmap_create_from_memory(
    JaliumContext* ctx,
    const uint8_t* data,
    uint32_t dataSize
);
/// Gets the width of a bitmap.
/// @param bitmap The bitmap.
/// @return The width in pixels.
JALIUM_API uint32_t jalium_bitmap_get_width(JaliumImage* bitmap);
/// Gets the height of a bitmap.
/// @param bitmap The bitmap.
/// @return The height in pixels.
JALIUM_API uint32_t jalium_bitmap_get_height(JaliumImage* bitmap);
/// Destroys a bitmap.
/// @param bitmap The bitmap to destroy.
JALIUM_API void jalium_bitmap_destroy(JaliumImage* bitmap);
/// Draws a bitmap.
/// @param rt The render target.
/// @param bitmap The bitmap to draw.
/// @param x The destination x coordinate.
/// @param y The destination y coordinate.
/// @param width The destination width.
/// @param height The destination height.
/// @param opacity The opacity (0.0 - 1.0).
JALIUM_API void jalium_draw_bitmap(
    JaliumRenderTarget* rt,
    JaliumImage* bitmap,
    float x, float y, float width, float height,
    float opacity
);
/// Checks if a backend is available.
/// @param backend The backend type.
/// @return 1 if available, 0 if not.
JALIUM_API int32_t jalium_is_backend_available(JaliumBackend backend);